--- a/hydra-ergo.org
+++ b/hydra-ergo.org
@@ -18,8 +18,12 @@
     ("i" hydra-ergo-i-menu/body :color blue)
     ("o" (lambda ()
 	   (interactive)
-	   (other-window 1)
-	   (hydra-ergo-o-menu/body)) :color blue)
+	   ;; (other-window 1 (if (> (count-windows) 1) nil t))
+	   (if (> (count-windows) 1)
+	       (other-window 1)
+	     (other-frame 1))
+	   (hydra-ergo-o-menu/body)
+	   ) :color blue)
     ("O" (lambda ()
 	   (interactive)
 	   (other-frame 1)
@@ -143,14 +147,16 @@ Create an intercept mode map for hydra-ergo. This will have a higher precedence 
      ;; 	 (interactive)
      ;; 	 (set-pomodoro-len-from-property)
      ;; 	 (org-pomodoro)))
-     ("o" (lambda ()
-	    (interactive)
-	    (if org-timer-start-time
-		(org-timer-stop)
-	      (let ((pomotime 
-		     (completing-read "minutes:" '("14" "10" "8") nil nil "14")))
-		(hydra-mgb/pomodoro/body)
-		(org-timer-set-timer pomotime)))))
+     ("o" (hydra-mgb/pomodoro/body)
+      ;; (lambda ()
+      ;; 	 (interactive)
+      ;; 	 (if org-timer-start-time
+      ;; 	     (org-timer-stop)
+      ;; 	   (let ((pomotime 
+      ;; 		  (completing-read "minutes:" '("14" "10" "8") nil nil "14")))
+      ;; 	     (hydra-mgb/pomodoro/body)
+      ;; 	     (org-timer-set-timer pomotime))))
+      )
      ("x" (org-cut-special))
      ("w" (org-copy-special))
      ("s" (org-sparse-tree))
@@ -233,8 +239,13 @@ Create an intercept mode map for hydra-ergo. This will have a higher precedence 
    :ID:       fd2e6082-b530-4572-9bac-74fa80fee2ac
    :END:
  #+BEGIN_SRC emacs-lisp :results silent
- (defhydra hydra-ergo-o-menu (:color red)
-	 ("o" other-window :color red))
+   (defhydra hydra-ergo-o-menu (:color red)
+     ("o" (lambda ()
+	  (interactive)
+	  (if(> (count-windows) 1)
+	      (other-window 1)
+	    (other-frame 1))
+	  (hydra-ergo-o-menu/body)) :color red))
  #+END_SRC
 ** O-menu
    :PROPERTIES:
@@ -498,7 +509,14 @@ cfw:open-org-calendar
 CLOCK: [2022-08-19 fre 16:08]--[2022-08-19 fre 16:11] =>  0:03
 :END:
 #+BEGIN_SRC emacs-lisp :results silent
-  (defhydra hydra-mgb/pomodoro (nil nil)
+  (defhydra hydra-mgb/pomodoro (:pre (progn
+				  (interactive)
+				  (if org-timer-start-time
+				      (org-timer-stop)
+				    (setq hydra-mgb/pomotime 
+					  (completing-read "minutes:" `(,hydra-mgb/pomotime "14" "10" "8") nil nil "14")
+				      ;; (hydra-mgb/pomodoro/body)
+				      (org-timer-set-timer pomotime)))))
     ("i" org-clock-in "org-clock-in")
     ("x" org-clock-in-last "org-clock-in-last"))
 #+END_SRC
